--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -5494,7 +5494,132 @@
         </div>
     </details>
 </div>
-  
+
+<!-- ÜÇÜNCÜ BÖLÜM: YARGI -->
+<section aria-labelledby="bolum-yargi">
+    <h3 id="bolum-yargi" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        ÜÇÜNCÜ BÖLÜM: Yargı
+    </h3>
+    <div class="highlight-box mt-4 mb-8">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Bölüm Analizi</h6>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, Yargı, devletin üçüncü temel gücüdür ve Türk Milleti adına <strong>bağımsız ve tarafsız mahkemelerce</strong> kullanılır. Bu bölümün ruhunu oluşturan iki temel kavram vardır: <strong>Bağımsızlık</strong> ve <strong>Tarafsızlık</strong>. Şimdi inceleyeceğimiz ilk maddeler, bu kavramların anayasal güvencelerini ve hâkimlik mesleğinin temellerini oluşturmaktadır.</p>
+    </div>
+
+    <!-- Madde 138 -->
+    <details id="madde-138" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 138 – Mahkemelerin Bağımsızlığı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Hâkimler, görevlerinde <strong>bağımsızdırlar;</strong> Anayasaya, kanuna ve hukuka uygun olarak <strong>vicdanı kanaatlerine göre hüküm verirler.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Hiçbir organ, makam, merci veya kişi,</strong> yargı yetkisinin kullanılmasında mahkemelere ve hâkimlere <strong>emir ve talimat veremez; genelge gönderemez; tavsiye ve telkinde bulunamaz.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Görülmekte olan bir dava hakkında <strong>Yasama Meclisinde</strong> yargı yetkisinin kullanılması ile ilgili <strong>soru sorulamaz, görüşme yapılamaz veya herhangi bir beyanda bulunulamaz.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Yasama ve yürütme organları ile idare, <strong>mahkeme kararlarına uymak zorundadır;</strong> bu organlar ve idare, mahkeme kararlarını hiçbir suretle değiştiremez ve bunların yerine getirilmesini geciktiremez.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm">Bu madde, hukuk devletinin "olmazsa olmaz" şartı olan yargı bağımsızlığının anayasal manifestosudur. Bu bağımsızlığı sağlayan dört temel güvenceyi (kalkanı) içerir:</p>
+            </div>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Yargı Bağımsızlığının 4 Kalkanı</h6>
+                <ol class="list-decimal pl-5 text-sm space-y-2">
+                    <li><strong>İç Kalkan (Vicdani Kanaat):</strong> Hâkimler, karar verirken kimseden etkilenmezler. Onları bağlayan üç şey vardır: <strong>Anayasa, kanun ve hukuk.</strong> Bu çerçevede, kendi vicdani kanaatlerine göre hüküm verirler.</li>
+                    <li><strong>Dış Kalkan (Emir ve Talimat Yasağı):</strong> Hiçbir organ, makam, merci veya kişi, yargı yetkisinin kullanılmasında mahkemelere ve hâkimlere emir ve talimat veremez; genelge gönderemez; tavsiye ve telkinde dahi bulunamaz. Bu, en mutlak korumadır.</li>
+                    <li><strong>Yasama Kalkanı (Meclis'in Sessizliği):</strong> Görülmekte olan bir dava hakkında, TBMM'de soru sorulamaz, görüşme yapılamaz veya herhangi bir beyanda bulunulamaz. Bu, davaların siyasi baskıdan uzak kalmasını sağlar.</li>
+                    <li><strong>İcra Kalkanı (Kararlara Uyma Zorunluluğu):</strong> Yasama ve yürütme organları ile idare, mahkeme kararlarına uymak zorundadır. Bu kararları değiştiremez ve yerine getirilmesini geciktiremezler.</li>
+                </ol>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 139 -->
+    <details id="madde-139" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 139 – Hâkimlik ve Savcılık Teminatı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Hâkimler ve savcılar <strong>azolunamaz,</strong> kendileri istemedikçe Anayasada gösterilen yaştan önce <strong>emekliye ayrılamaz;</strong> bir mahkemenin veya kadronun kaldırılması sebebiyle de olsa, <strong>aylık, ödenek ve diğer özlük haklarından yoksun kılınamaz.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Meslekten çıkarılmayı gerektiren bir suçtan dolayı hüküm giymiş olanlar, görevini sağlık bakımından yerine getiremeyeceği kesin olarak anlaşılanlar veya meslekte kalmalarının uygun olmadığına karar verilenler hakkında kanundaki istisnalar saklıdır.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm mb-2">Madde 138 mahkemenin kurumsal bağımsızlığını korurken, bu madde bizzat hâkim ve savcının kişisel bağımsızlığını korur. Buna "Hâkimlik Teminatı" denir ve hâkimin görevden alınma korkusu olmadan karar verebilmesini sağlar.</p>
+                <p class="font-semibold text-sm mb-2">Teminatın İçeriği ("Azledilemezlik İlkesi"):</p>
+                <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li>Hâkimler ve savcılar azlolunamaz (görevden alınamaz).</li>
+                    <li>Kendileri istemedikçe, Anayasa'da gösterilen yaştan (65) önce emekliye ayrılamaz.</li>
+                    <li>Mahkemesi veya kadrosu kaldırılsa bile aylık ve diğer özlük haklarından yoksun bırakılamaz.</li>
+                </ul>
+            </div>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Teminatın İstisnaları</h6>
+                <p style="text-align: justify;" class="text-sm">Bu güçlü teminatın işlemediği, yani bir hâkim veya savcının meslekten çıkarılabileceği üç durum Anayasa'da sayılmıştır:</p>
+                <ol class="list-decimal pl-5 text-sm mt-2 space-y-1">
+                    <li>Meslekten çıkarılmayı gerektiren bir suçtan dolayı <strong>hüküm giymiş olanlar.</strong></li>
+                    <li>Görevini <strong>sağlık bakımından</strong> yerine getiremeyeceği kesin olarak anlaşılanlar.</li>
+                    <li><strong>Meslekte kalmalarının uygun olmadığına</strong> (disiplin soruşturması sonucu) karar verilenler.</li>
+                </ol>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 140 -->
+    <details id="madde-140" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 140 – Hâkimlik ve Savcılık Mesleği
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Hâkimler ve savcılar adlî ve idarî yargı hâkim ve savcıları olarak görev yaparlar. Bu görevler meslekten hâkim ve savcılar eliyle yürütülür.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hâkimler, mahkemelerin bağımsızlığı ve hâkimlik teminatı esaslarına göre görev ifa ederler.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hâkim ve savcıların nitelikleri, atanmaları, hakları ve ödevleri, aylık ve ödenekleri, meslekte ilerlemeleri, görevlerinin ve görev yerlerinin geçici veya sürekli olarak değiştirilmesi, haklarında disiplin kovuşturması açılması ve disiplin cezası verilmesi, görevleriyle ilgili veya görevleri sırasında işledikleri suçlarından dolayı soruşturma yapılması ve yargılanmalarına karar verilmesi, meslekten çıkarmayı gerektiren suçluluk veya yetersizlik halleri ve meslek içi eğitimleri ile diğer <strong>özlük işleri</strong> mahkemelerin bağımsızlığı ve hâkimlik teminatı esaslarına göre <strong>kanunla düzenlenir.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hâkimler ve savcılar <strong>altmışbeş yaşını bitirinceye kadar</strong> hizmet görürler; askerî hâkimlerin yaş haddi, yükselme ve emeklilikleri kanunda gösterilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hâkimler ve savcılar, kanunda belirtilenlerden başka, <strong>Resmî ve özel hiçbir görev alamazlar.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hâkimler ve savcılar <strong>idarî görevleri yönünden Adalet Bakanlığına bağlıdırlar.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hâkim ve savcı olup da adalet hizmetindeki idarî görevlerde çalışanlar, hâkimler ve savcılar hakkındaki hükümlere tâbidirler. Bunlar, hâkimler ve savcılara ait esaslar dairesinde sınıflandırılır ve derecelendirilirler, hâkimlere ve savcılara tanınan her türlü haklardan yararlanırlar.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm mb-2">Bu madde, hâkimlik ve savcılık mesleğinin genel çerçevesini ve statüsünü belirler.</p>
+                 <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li><strong>Yargı Kolları:</strong> Hâkim ve savcıların adli ve idari yargı olarak iki ana kolda görev yaptığı belirtilir.</li>
+                    <li><strong>Kanun Güvencesi:</strong> Tıpkı memurlar gibi, hâkim ve savcıların da nitelikleri, atanmaları, maaşları, disiplin işlemleri gibi tüm özlük işleri, mahkemelerin bağımsızlığı ve hâkimlik teminatı esaslarına göre KANUNLA düzenlenir.</li>
+                    <li><strong>Emeklilik Yaşı:</strong> Hâkim ve savcılar <strong>altmış beş (65)</strong> yaşını bitirinceye kadar hizmet görürler.</li>
+                    <li><strong>Başka Görev Yasağı:</strong> Kanunda belirtilen istisnalar dışında, resmi veya özel hiçbir başka görev alamazlar.</li>
+                </ul>
+            </div>
+            <div class="warning-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Karıştırmayın: Adalet Bakanlığı'na Bağlılık</h6>
+                <p style="text-align: justify;" class="text-sm mb-2">Bu maddenin sınavlar açısından en kritik ve en çok yanlış anlaşılan cümlesi şudur: "Hâkimler ve savcılar idarî görevleri yönünden Adalet Bakanlığına bağlıdırlar."</p>
+                <p style="text-align: justify;" class="text-sm"><strong>Anlamı Nedir?:</strong> Bu bağlılık, yargısal faaliyetlerle ilgili değildir. Adalet Bakanı, bir hâkime "şu davada şöyle karar ver" diyemez. Bu bağlılık, sadece mahkemenin kalemi, binanın bakımı, personelin idaresi gibi idari ve bürokratik işlerle sınırlıdır. Bu durum, hâkimlik teminatını ve mahkemelerin bağımsızlığını ihlal etmez.</p>
+            </div>
+        </div>
+    </details>
+</section>
+
+                
 </section>
  
             </article>
