--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -5839,6 +5839,127 @@
         </div>
     </div>
 </details>
+
+                <!-- Madde 147 -->
+<details id="madde-147" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 147 – Üyelerin Görev Süresi ve Üyeliğin Sona Ermesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Anayasa Mahkemesi üyeleri <strong>oniki yıl için seçilirler.</strong> Bir kimse <strong>iki defa Anayasa Mahkemesi üyesi seçilemez.</strong> Anayasa Mahkemesi üyeleri <strong>altmışbeş yaşını doldurunca</strong> emekliye ayrılırlar. Zorunlu emeklilik yaşından önce görev süresi dolan üyelerin başka bir görevde çalışmaları ve özlük işleri kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Anayasa Mahkemesi üyeliği, bir üyenin hâkimlik mesleğinden çıkarılmayı gerektiren bir suçtan dolayı hüküm giymesi halinde <strong>kendiliğinden;</strong> görevini sağlık bakımından yerine getiremeyeceğinin kesin olarak anlaşılması halinde de, Anayasa Mahkemesi <strong>üye tamsayısının salt çoğunluğunun kararı ile sona erer.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm mb-2">Bu madde, Anayasa Mahkemesi üyelerinin görev sürelerini ve bu görevin hangi hallerde sona ereceğini düzenler.</p>
+            <ul class="list-disc pl-5 text-sm space-y-1">
+                <li><strong>Görev Süresi:</strong> AYM üyeleri <strong>on iki (12) yıl</strong> için seçilirler.</li>
+                <li><strong>Tekrar Seçilme Yasağı:</strong> Bir kimse, AYM üyesi olarak sadece bir defa görev yapabilir, <strong>ikinci kez seçilemez.</strong></li>
+                <li><strong>Emeklilik Yaşı:</strong> Üyeler, <strong>altmış beş (65) yaşını</strong> doldurunca zorunlu olarak emekliye ayrılırlar.</li>
+            </ul>
+        </div>
+        <div class="strategy-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Üyelikte "12 Yıl mı, 65 Yaş mı?"</h6>
+            <p style="text-align: justify;" class="text-sm mb-2">Sınavlarda bu ikili durum sıkça sorulur. Kural şudur: <strong>Hangisi önce dolarsa o uygulanır.</strong></p>
+            <ul class="list-none space-y-2 text-sm">
+                <li><strong>Örnek 1:</strong> 50 yaşında seçilen bir üye, 12 yıllık görev süresini 62 yaşında tamamlar ve görevi biter.</li>
+                <li><strong>Örnek 2:</strong> 58 yaşında seçilen bir üye, 12 yıllık görev süresi dolmadan, 65 yaşına geldiğinde zorunlu olarak emekliye ayrılır.</li>
+            </ul>
+            <p class="text-sm font-semibold mt-3 mb-2">Üyeliğin Sona Erme Halleri:</p>
+             <ul class="list-disc pl-5 text-sm space-y-1">
+                <li><strong>Kendiliğinden Sona Erme:</strong> Üyenin, hâkimlikten çıkarılmayı gerektiren bir suçtan <strong>hüküm giymesi</strong> halinde üyeliği kendiliğinden düşer.</li>
+                <li><strong>AYM Kararıyla Sona Erme:</strong> Görevini <strong>sağlık bakımından</strong> yerine getiremeyeceğinin kesin olarak anlaşılması halinde, AYM üye tamsayısının salt çoğunluğunun (8 üye) kararı ile üyelik sona erer.</li>
+            </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 148 -->
+<details id="madde-148" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 148 – Görev ve Yetkileri
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Anayasa Mahkemesi, kanunların, Cumhurbaşkanlığı kararnamelerinin ve Türkiye Büyük Millet Meclisi İçtüzüğünün Anayasaya şekil ve esas bakımlarından uygunluğunu denetler ve <strong>bireysel başvuruları karara bağlar.</strong> <strong>Anayasa değişikliklerini ise sadece şekil bakımından inceler ve denetler.</strong> Ancak, <strong>olağanüstü hallerde ve savaş hallerinde çıkarılan Cumhurbaşkanlığı kararnamelerinin</strong> şekil ve esas bakımından Anayasaya aykırılığı iddiasıyla, Anayasa Mahkemesinde <strong>dava açılamaz.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanunların şekil bakımından denetlenmesi, son oylamanın, öngörülen çoğunlukla yapılıp yapılmadığı; Anayasa değişikliklerinde ise, teklif ve oylama çoğunluğuna ve ivedilikle görüşülemeyeceği şartına uyulup uyulmadığı hususları ile sınırlıdır. Şekil bakımından denetleme, <strong>Cumhurbaşkanınca veya Türkiye Büyük Millet Meclisi üyelerinin beşte biri tarafından</strong> istenebilir. Kanunun yayımlandığı tarihten itibaren <strong>on gün geçtikten sonra, şekil bozukluğuna dayalı iptal davası açılamaz;</strong> def'i yoluyla da ileri sürülemez.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Herkes,</strong> Anayasada güvence altına alınmış temel hak ve özgürlüklerinden, Avrupa İnsan Hakları Sözleşmesi kapsamındaki herhangi birinin kamu gücü tarafından, ihlal edildiği iddiasıyla Anayasa Mahkemesine başvurabilir. Başvuruda bulunabilmek için <strong>olağan kanun yollarının tüketilmiş olması şarttır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Bireysel başvuruda, kanun yolunda gözetilmesi gereken hususlarda inceleme yapılamaz.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Bireysel başvuruya ilişkin usul ve esaslar kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Anayasa Mahkemesi <strong>Cumhurbaşkanını, Türkiye Büyük Millet Meclisi Başkanını, Cumhurbaşkanı yardımcılarını, bakanları, Anayasa Mahkemesi, Yargıtay, Danıştay Başkan ve üyelerini, Başsavcılarını, Cumhuriyet Başsavcıvekilini, Hâkimler ve Savcılar Kurulu ve Sayıştay Başkan ve üyelerini</strong> görevleriyle ilgili suçlardan dolayı <strong>Yüce Divan sıfatıyla yargılar.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Genelkurmay Başkanı, Kara, Deniz ve Hava Kuvvetleri Komutanları</strong> da görevleriyle ilgili suçlardan dolayı Yüce Divanda yargılanırlar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yüce Divanda, savcılık görevini <strong>Cumhuriyet Başsavcısı veya Cumhuriyet Başsavcıvekili</strong> yapar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yüce Divan kararlarına karşı yeniden inceleme başvurusu yapılabilir. Genel Kurulun yeniden inceleme sonucunda verdiği kararlar kesindir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Anayasa Mahkemesi, Anayasa ile verilen diğer görevleri de yerine getirir.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Anayasa Mahkemesi'nin Üç Temel Şapkası</h6>
+            <p style="text-align: justify;" class="text-sm">Bu, Anayasa Mahkemesi'nin ne iş yaptığını anlatan en temel maddedir. Mahkemenin görevlerini, taktığı üç farklı şapkaya benzeterek kolayca anlayabiliriz:</p>
+            <ol class="list-decimal pl-5 text-sm space-y-2">
+                <li><strong>Norm Denetimi (Kanun Doktoru):</strong> Kanunların, CBK'ların ve İçtüzüğün Anayasa'ya uygun olup olmadığını denetler.</li>
+                <li><strong>Bireysel Başvuru (Hak İhlali Hastanesi):</strong> Temel hak ve özgürlükleri kamu gücü tarafından ihlal edilen vatandaşların başvurduğu bir üst merciidir.</li>
+                <li><strong>Yüce Divan (Devletin Zirvesini Yargılayan Mahkeme):</strong> En üst düzey kamu görevlilerini, görevleriyle ilgili suçlardan dolayı yargılar.</li>
+            </ol>
+        </div>
+        <div class="strategy-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: AYM Görevleri Detaylı Analiz</h6>
+            <div class="space-y-4">
+                <div>
+                    <h6 class="font-semibold text-sky-800">Şapka 1: Norm Denetimi</h6>
+                    <ul class="list-disc pl-5 text-sm space-y-1 mt-2">
+                        <li><strong>Neleri Denetler?:</strong> Kanunları, Cumhurbaşkanlığı Kararnamelerini (CBK) ve TBMM İçtüzüğü'nü hem <strong>şekil</strong> hem de <strong>esas</strong> bakımından denetler.</li>
+                        <li><strong>İstisna 1 (Anayasa Değişiklikleri):</strong> Anayasa değişikliklerini <strong>sadece şekil bakımından</strong> denetleyebilir (Teklif ve oylama çoğunluğuna uyulmuş mu gibi).</li>
+                        <li><strong>İstisna 2 (OHAL CBK'ları):</strong> Olağanüstü hallerde çıkarılan Cumhurbaşkanlığı Kararnamelerinin Anayasa'ya aykırılığı iddiasıyla AYM'de <strong>dava açılamaz.</strong> Bu, yargı denetiminin en önemli istisnasıdır.</li>
+                        <li><strong>Şekil Bozukluğu Davası:</strong><br>
+                            - Kimler Açabilir?: <strong>Cumhurbaşkanı</strong> veya TBMM üye tamsayısının <strong>beşte biri (1/5'i - 120 vekil).</strong><br>
+                            - Süre: Kanunun yayımlandığı tarihten itibaren <strong>10 gün içinde</strong> açılmalıdır. Bu süre geçtikten sonra şekil bozukluğu iddia edilemez.</li>
+                    </ul>
+                </div>
+                <div>
+                    <h6 class="font-semibold text-sky-800">Şapka 2: Bireysel Başvuru (2010 Değişikliği)</h6>
+                     <ul class="list-disc pl-5 text-sm space-y-1 mt-2">
+                        <li><strong>Kim Başvurabilir?:</strong> Herkes.</li>
+                        <li><strong>Neden?:</strong> Anayasa ve Avrupa İnsan Hakları Sözleşmesi (AİHS) kapsamındaki bir temel hakkının kamu gücü tarafından ihlal edildiği iddiasıyla.</li>
+                        <li><strong>Zorunlu Şart:</strong> Başvuru yapabilmek için, öncelikle iç hukuktaki tüm <strong>olağan kanun yollarının tüketilmiş olması</strong> gerekir (Yani önce ilk derece mahkemesi, istinaf, temyiz gibi yolların bitirilmesi gerekir).</li>
+                    </ul>
+                </div>
+                 <div>
+                    <h6 class="font-semibold text-sky-800">Şapka 3: Yüce Divan Yargılaması</h6>
+                    <p class="text-sm mt-2">AYM, aşağıdaki üst düzey görevlileri, görevleriyle ilgili suçlardan dolayı Yüce Divan sıfatıyla yargılar. Bu liste sınavların favorisidir:</p>
+                    <ul class="list-disc pl-5 text-sm space-y-1 mt-2">
+                        <li>Cumhurbaşkanı, TBMM Başkanı, Cumhurbaşkanı Yardımcıları, Bakanlar</li>
+                        <li>Anayasa Mahkemesi, Yargıtay, Danıştay Başkan ve Üyeleri</li>
+                        <li>Başsavcılar, Başsavcıvekili</li>
+                        <li>Hâkimler ve Savcılar Kurulu (HSK) ve Sayıştay Başkan ve Üyeleri</li>
+                        <li>Genelkurmay Başkanı, Kara, Deniz ve Hava Kuvvetleri Komutanları</li>
+                    </ul>
+                     <p class="text-sm mt-2"><strong>Yüce Divan'la İlgili Diğer Kurallar:</strong> Savcılık görevini Yargıtay Cumhuriyet Başsavcısı veya Başsavcıvekili yapar. Yüce Divan kararlarına karşı <strong>yeniden inceleme</strong> başvurusu yapılabilir.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</details>
                 
 </section>
  
